// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Breadcrumbs /> > Default story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Child
            </title>
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Child
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Grandchild
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongList story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 9
            </title>
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Parent
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 4
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 5
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 6
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 7
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 8
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 9
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 10
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongText story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongTextCustomSeparator story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > OneCrumb story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > TwoCrumbs story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 1
            </title>
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
